Add skyblock difficulties + achievements + biomes seed at spawn